modifying text file

--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <DOCTYPE html>
 
-<html></html>
+<html>
 
 
 <head>
@@ -8,22 +8,30 @@
 
 
 </head>
+<title> Lesson 1</title>
 
 
 
 <body>
 
-    <h1>Hi there my name is SY</h1>
-    <H2> Lets get ready to learn!</H2>
+    <h1>Lesson 1</h1>
+    <H2> Lesson plan or objectives</H2>
+    <br>
+    <br>
+    <br>
+
     <p> To achieve Greatness
 
-        I was watching a documentary about Muhammad Ali and it was about his life and struggles leading up to now, but during the segment where he said the famous “I am greatest!” line inspired me for that to be my topic. I believe in the greatness that is obtained through optimism, gratitude, and a strong will. I believe in looking at things glass half full. Yet such a thing isn’t naturally applied, and it must be searched for.</p>
+        I was watching a documentary about Muhammad Ali and it was about his life and struggles leading up to now, but during the segment where he said the famous “I am greatest!” line inspired me for that to be my topic. 
+        I believe in the greatness that is obtained through optimism, gratitude, and a strong will. 
+        I believe in looking at things glass half full. <br> Yet such a thing isn’t naturally applied, and it must be searched for.</p>
 
 </body>
 
 
 
 
+</html>
 
 
 
