modifying text file

--- a/test.html
+++ b/test.html
@@ -23,7 +23,9 @@
 
         I was watching a documentary about Muhammad Ali and it was about his life and struggles leading up to now, but during the segment where he said the famous “I am greatest!” line inspired me for that to be my topic. 
         I believe in the greatness that is obtained through optimism, gratitude, and a strong will. 
-        I believe in looking at things glass half full. <br> Yet such a thing isn’t naturally applied, and it must be searched for.</p>
+        I believe in looking at things glass half full. <br> Yet such a thing isn’t naturally applied, and it must be searched for.
+    </p>
+        
 
 </body>
 
