--- a/Pancake.html
+++ b/Pancake.html
@@ -5,8 +5,9 @@
 <head>
 
 <title>PANCAKE RECIPE</title>
-   
+<link href="Pancake.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 <h1>Recipe for Pancakes</h1>
 <h2>Learn a skill for life with our foolproof easy pancake recipe that ensures perfect pancakes every time.</h2>
@@ -46,10 +47,9 @@
 
 </body>
 
+<p>Click below to see the original recipe I followed</p>
 
-<p>Click here to see the original recipe I followed</p>
-
-<a href="https://www.bbc.co.uk/food/recipes/fluffyamericanpancak_74828">Visit HERE!</a>
+<a href="https://www.bbc.co.uk/food/recipes/fluffyamericanpancak_74828" >Visit HERE!</a>
 
 
 
