--- a/Homework2.html
+++ b/Homework2.html
@@ -4,8 +4,9 @@
 
 <head>
  
- 
+
     <title>Guide to becoming a computer programmer in 2022</title>
+    <link href="Styling.css" rel="stylesheet" type="text/css">
 </head>
 
 <br><br>
